fix style: map overflow

--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -12,7 +12,6 @@ figure#assets-map {
 	.assets-map {
 		width: 100%;
 		height: 100%;
-		overflow: scroll;
 
 		.marker {
 			height: 3em;
